@@ -4,14 +4,18 @@
 package de.uka.ilkd.key.scripts.meta;
 
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
 import de.uka.ilkd.key.control.AbstractUserInterfaceControl;
 import de.uka.ilkd.key.scripts.AbstractCommand;
 import de.uka.ilkd.key.scripts.EngineState;
-import de.uka.ilkd.key.scripts.ScriptException;
+import de.uka.ilkd.key.scripts.ScriptCommandAst;
 
+import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
+import org.jspecify.annotations.NullMarked;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,15 +29,17 @@ public class ValueInjectorTest {
     public void testInjectionSimple() throws Exception {
         PP pp = new PP();
         Map<String, Object> args = new HashMap<>();
+        ScriptCommandAst ast = new ScriptCommandAst("pp", args, new LinkedList<>(),
+            null, null);
         args.put("b", true);
         args.put("i", 42);
-        args.put("s", "blubb");
+        args.put("q", "blubb");
 
-        ValueInjector.injection(new PPCommand(), pp, args);
+        ValueInjector.injection(new PPCommand(), pp, ast);
 
         assertTrue(pp.b);
         assertEquals(42, pp.i);
-        assertEquals("blubb", pp.s);
+        assertEquals("blubb", pp.required);
 
     }
 
@@ -41,19 +47,21 @@ public class ValueInjectorTest {
     public void testRequired() {
         PP pp = new PP();
         Map<String, Object> args = new HashMap<>();
+        ScriptCommandAst ast = new ScriptCommandAst("pp", args, new LinkedList<>(),
+            null, null);
         args.put("b", "true");
         args.put("s", "blubb");
         assertThrows(ArgumentRequiredException.class,
-            () -> ValueInjector.injection(new PPCommand(), pp, args));
+            () -> ValueInjector.injection(new PPCommand(), pp, ast));
     }
 
     @Test
     public void testInferScriptArguments() throws NoSuchFieldException {
-        List<ProofScriptArgument<PP>> meta = ArgumentsLifter.inferScriptArguments(PP.class, null);
-        assertEquals(3, meta.size());
+        List<ProofScriptArgument> meta = ArgumentsLifter.inferScriptArguments(PP.class);
+        assertEquals(4, meta.size());
 
         {
-            ProofScriptArgument<PP> b = meta.get(0);
+            ProofScriptArgument b = meta.getFirst();
             assertEquals("b", b.getName());
             assertEquals(PP.class.getDeclaredField("b"), b.getField());
             assertEquals(Boolean.TYPE, b.getType());
@@ -61,7 +69,7 @@ public class ValueInjectorTest {
         }
 
         {
-            ProofScriptArgument<PP> i = meta.get(1);
+            ProofScriptArgument i = meta.get(1);
             assertEquals("i", i.getName());
             assertEquals(PP.class.getDeclaredField("i"), i.getField());
             assertEquals(Integer.TYPE, i.getType());
@@ -69,7 +77,7 @@ public class ValueInjectorTest {
         }
 
         {
-            ProofScriptArgument<PP> i = meta.get(2);
+            ProofScriptArgument i = meta.get(2);
             assertEquals("s", i.getName());
             assertEquals(PP.class.getDeclaredField("s"), i.getField());
             assertEquals(String.class, i.getType());
@@ -81,25 +89,28 @@ public class ValueInjectorTest {
     public static class PP {
         @Option("b")
         boolean b;
+
         @Option(value = "i")
         int i;
-        @Option(value = "s", required = false)
+
+        @Option(value = "s")
+        @Nullable
         String s;
+
+        @Option("q")
+        @MonotonicNonNull
+        String required;
     }
 
-    private static class PPCommand extends AbstractCommand<PP> {
+    @NullMarked
+    private static class PPCommand extends AbstractCommand {
         public PPCommand() {
             super(null);
         }
 
         @Override
-        public PP evaluateArguments(EngineState state, Map<String, Object> arguments) {
-            return null;
-        }
+        public void execute(ScriptCommandAst args) {
 
-        @Override
-        public void execute(AbstractUserInterfaceControl uiControl, PP args, EngineState stateMap)
-                throws ScriptException, InterruptedException {
         }
 
         @Override
